<resources>
    <string name="app_name">Quizzitions</string>
    <string name="quizzitions"><u>Quizzitions...</u></string>
    <string name="music"><u>Music</u></string>
    <string name="gospel"><u>Gospel</u></string>
    <string name="reggae"><u>Reggae</u></string>
    <string name="enter">Lets get dancing</string>
    <string name="musics"><u><i>Lets dance</i></u></string>
    <string name="queen"><u>1. What is the most expensive perfume in the world?</u></string>
    <string name="king"><u><b>Who is the queen of soul music?</b></u></string>
    <string name="goBack">I think this is too hard!</string>
    <string name="submit">I wanna know how I did!</string>
    <string name="head"><u>Lets get pretty!</u></string>
    <string name="resultsHead">Well...</string>
    <string name="musicHeadOne"><u><b>1. Who was a South African anti-apartheid Afropop singer?</b></u></string>
    <string name="brenda">Brenda Fassie</string>
    <string name="year"><u><b>2. Which group consists of artist: Kabelo, Tokollo, and Zwai?</b></u></string>
    <string name="tkz">TKZ</string>
    <string name="pianoAns">Bartolomeo di Francesco Cristofori</string>
    <string name="piano"><u><b>3. This piano was invented in Italy in 1709 by a harpsichord maker</b></u></string>
    <string name="black"><u><b>4. Which group in South Africa has won 4 Grammy awards?</b></u></string>
    <string name="blackAns">Ladysmith Black Mambazo</string>
    <string name="mariam">Mariam Makeba</string>
    <string name="thandiswa">Thandiswa Mazwai</string>
    <string name="mafikizolo">Mafikizolo</string>
    <string name="freshly">Freshly Ground</string>
    <string name="soweto">Soweto Gospel Choir</string>
    <string name="jozi">Jozi</string>
    <string name="robert">Robert de Niro</string>
    <string name="cole">Cole Sprouse</string>
    <string name="perfume">DKNY Golden Delicious Million Dollar Fragrance Bottle</string>
    <string name="chanel">Chanel Grand Extrait</string>
    <string name="caron">Caron Poivre</string>
    <string name="bag"><u>2. Most Expensive Hermes Handbags Ever for Ladies</u></string>
    <string name="hermes">The Hermes Chaine d Ancre</string>
    <string name="kelly">Kelly handbag in Bag</string>
    <string name="crocodile">Graphite Crocodile bag</string>
    <string name="wig"><u>3. The best hair wig for ladies</u></string>
    <string name="rene">Noriko for Rene of Paris Shilo wig</string>
    <string name="bobbi">Bobbi Boss Lace front wig</string>
    <string name="penelope">Penelope by Envy Wigs</string>
    <string name="gel">4. The best hair gel for men</string>
    <string name="klein">Calvin Klein Euphoria Men Body wash</string>
    <string name="allen">Allen Body Wash Version 1.06</string>
    <string name="axe">Axe Recovery shower gel</string>
    <string name="animal"><u>Which animal can clean its own ears with its tongue?</u></string>
    <string name="elephant">Elephant</string>
    <string name="hippo">Hippo</string>
    <string name="giraffe">Giraffe</string>
    <string name="women"><u>Which woman body part indicates that she is smart and will bring intelligent children to the world?</u></string>
    <string name="curves">Curvy hips</string>
    <string name="eyes">White eyes</string>
    <string name="hair">Long hair</string>
    <string name="country"><u>Which is agriculturally self sufficient country in Europe</u></string>
    <string name="france">France</string>
    <string name="italy">Italy</string>
    <string name="greece">Greece</string>
    <string name="planet"><u>The only planet that rotates clockwise is...</u></string>
    <string name="venus">Venus</string>
    <string name="pluto">Pluto</string>
    <string name="mercury">Mercury</string>


</resources>
