<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_soul"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.quizzitions.SoulActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/head" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:text="@string/musics"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/headingOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/animal"

            />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/genKnow"
            android:layout_marginLeft="10dp">


            <RadioButton
                android:id="@+id/radioTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/giraffe"
                />

            <RadioButton
                android:id="@+id/radioOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hippo" />

            <RadioButton
                android:id="@+id/radioThree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/elephant" />

        </RadioGroup>

        <TextView
            android:id="@+id/headingTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/women"

            />


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/genKnowOne"
            android:layout_marginLeft="10dp">


            <RadioButton
                android:id="@+id/radioClkk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hair" />

            <RadioButton
                android:id="@+id/radioBtnn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/curves" />

            <RadioButton
                android:id="@+id/radioBtnnn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eyes" />

        </RadioGroup>

        <TextView
            android:id="@+id/HeadingThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/country"

            />


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/genKnowTwo"
            android:layout_marginLeft="10dp">


            <RadioButton
                android:id="@+id/radioBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="RadioButton" />

            <RadioButton
                android:id="@+id/radioClk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="RadioButton" />

            <RadioButton
                android:id="@+id/radioClkkk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="RadioButton" />

        </RadioGroup>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/king"

            />


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/genKnowThree"
            android:layout_marginLeft="10dp">


            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="RadioButton" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="RadioButton" />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="RadioButton" />


            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:onClick="submitHere"
                android:layout_weight="1"
                android:background="@android:color/holo_green_dark"
                android:text="@string/submit" />

        </RadioGroup>
    </LinearLayout>
</ScrollView>