<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_soul"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.quizzitions.SoulActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/cosmetic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:text="@string/head"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/headingOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/queen"

            />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/CosmeticsOne"
            android:layout_marginStart="10dp">


            <RadioButton
                android:id="@+id/cosThree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="RadioButton" />

            <RadioButton
                android:id="@+id/cosOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="RadioButton" />

            <RadioButton
                android:id="@+id/cosTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="RadioButton" />

        </RadioGroup>

        <TextView
            android:id="@+id/headingTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/king"

            />


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/CosmeticsTwo"
            android:layout_marginLeft="10dp">


            <RadioButton
                android:id="@+id/radioClkk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="RadioButton" />

            <RadioButton
                android:id="@+id/radioBtnn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="RadioButton" />

            <RadioButton
                android:id="@+id/radioBtnnn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="RadioButton" />

        </RadioGroup>

        <TextView
            android:id="@+id/HeadingThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/king"

            />


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/CosmeticsThree"
            android:layout_marginLeft="10dp">


            <RadioButton
                android:id="@+id/cosFour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="RadioButton" />

            <RadioButton
                android:id="@+id/cosFive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="RadioButton" />

            <RadioButton
                android:id="@+id/cosSix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="RadioButton" />

        </RadioGroup>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/king"

            />


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/CosmeticsFour"
            android:layout_marginLeft="10dp">


            <RadioButton
                android:id="@+id/cosmOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="RadioButton" />

            <RadioButton
                android:id="@+id/cosmTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="RadioButton" />

            <RadioButton
                android:id="@+id/cosmFour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="RadioButton" />


            <Button
                android:id="@+id/submit"
                android:onClick="submitHere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:background="@android:color/holo_green_dark"
                android:text="@string/submit" />

        </RadioGroup>
    </LinearLayout>
</ScrollView>